<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  tools:context=".CreateTripActivity">

<RelativeLayout
    style="@style/Layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    tools:context=".CreateTripActivity" >

	<TextView
	      android:id="@+id/headcreatetrip"
	      style="@style/Header"
	      android:text="@string/headcreatetrip"/>
	
	<TextView
	    android:id="@+id/labeltripname"
	    style="@style/MenuLabel"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_below="@+id/headcreatetrip"
	    android:layout_marginLeft="15dp"
	    android:layout_marginTop="30dp"
	    android:text="@string/labeltripname" />
	
	<EditText
	    android:id="@+id/edittripname"
	    style="@style/Menubox"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBottom="@+id/labeltripname"
	    android:layout_alignParentRight="true"
	    android:layout_marginRight="40dp"
	    android:ems="10" />
	
	<TextView
	    android:id="@+id/labeldestination"
	    style="@style/MenuLabel"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/labeltripname"
	    android:layout_below="@+id/labeltripname"
	    android:layout_marginTop="20dp"
	    android:text="@string/labeldestination" />
	
	<EditText
	    android:id="@+id/editdestname"
	    style="@style/Menubox"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/edittripname"
	    android:layout_alignParentRight="true"
	    android:layout_marginRight="40dp"
	    android:layout_marginTop="20dp"
	    android:ems="10" />
	
	<TextView
	    android:id="@+id/labelcreator"
	    style="@style/MenuLabel"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/labeltripname"
	    android:layout_below="@+id/labeldestination"
	    android:layout_marginTop="20dp"
	    android:text="@string/labelcreator" />
	
	<EditText
	    android:id="@+id/editcreatorname"
	    style="@style/Menubox"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/editdestname"
	    android:layout_alignParentRight="true"
	    android:layout_marginRight="40dp"
	    android:layout_marginTop="20dp"
	    android:ems="10" />
	
	<TextView
	    android:id="@+id/labeldate"
	    style="@style/MenuLabel"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/labeltripname"
	    android:layout_below="@+id/labelcreator"
	    android:layout_marginTop="20dp"
	    android:text="@string/labeldate" />
	 
	<!-- To print raw error message for dev purpose -->
	<TextView
	    android:id="@+id/errordev"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBottom="@+id/btncreatetrip"
	    android:layout_centerHorizontal="true"
	    android:layout_marginBottom="55dp"
	    android:textAppearance="?android:attr/textAppearanceLarge" />
	
	<Button
	    android:id="@+id/btncreatetrip"
	    style="@style/Button"
	    android:layout_alignParentBottom="true"
	    android:layout_centerHorizontal="true"
	    android:layout_marginBottom="15dp"
	    android:onClick="onClick"
	    android:text="@string/btncreatetrip" />

	<Button
	    android:id="@+id/btndate"
	    style="?android:attr/buttonStyleSmall"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignTop="@+id/labeldate"
	    android:layout_marginLeft="25dp"
	    android:layout_toRightOf="@+id/errordev"
	    android:onClick="showDatePickerDialog"
	    android:text="@string/btndate"
	    android:textSize="12sp" />
	    
	<RelativeLayout
	    android:id="@+id/friendlayout"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:layout_below="@+id/btndate"
	    android:layout_marginLeft="11dp"
	    android:layout_marginTop="40dp"
	    android:background="#CCefe6d1" >

	    <!-- TODO : Dynamically add fields to layout
	    <Button
	        android:id="@+id/btnadd"
	        style="@style/Button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toLeftOf="@+id/labelname"
	        android:layout_marginRight="10dp"
	        android:layout_marginTop="20dp"
	        android:padding="2dp"
	        android:text="@string/btnadd"
	        android:textSize="15sp"
	        android:onClick="onClick" /> -->
	    
	    <TextView
	        android:id="@+id/labelname"
	        style="@style/MenuLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_above="@+id/editfriendname1"
	        android:layout_alignLeft="@+id/editfriendname1"
	        android:layout_marginTop="30dp"
	        android:text="@string/labelfriendname"
	        android:textStyle="bold" />
	    
	    <TextView
	        android:id="@+id/labellocation"
	        style="@style/MenuLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_above="@+id/editfriendlocation1"
	        android:layout_alignLeft="@+id/editfriendlocation1"
	        android:layout_marginTop="30dp"
	        android:text="@string/labelfriendlocation"
	        android:textStyle="bold" />
	    
	    <TextView
	        android:id="@+id/labelfriend1"
	        style="@style/MenuLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="15dp"
	        android:layout_marginTop="70dp"
	        android:text="@string/labelfriend" />
	    
	    <EditText
		    android:id="@+id/editfriendname1"
		    style="@style/Menubox"
		    android:layout_width="100dp"
		    android:layout_height="wrap_content"
		    android:layout_alignBottom="@+id/labelfriend1"
		    android:layout_toRightOf="@+id/labelfriend1"
		    android:layout_marginLeft="15dp"
		    android:ems="10" />
	    
	    <EditText
		    android:id="@+id/editfriendlocation1"
		    style="@style/Menubox"
		    android:layout_width="100dp"
		    android:layout_height="wrap_content"
		    android:layout_alignBottom="@+id/editfriendname1"
		    android:layout_toRightOf="@+id/editfriendname1"
		    android:layout_marginLeft="15dp"
		    android:ems="10" />
	    
	    <TextView
	        android:id="@+id/labelfriend2"
	        style="@style/MenuLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/labelfriend1"
	        android:layout_below="@+id/labelfriend1"
	    	android:layout_marginTop="20dp"
	        android:text="@string/labelfriend" />
	    
	    <EditText
		    android:id="@+id/editfriendname2"
		    style="@style/Menubox"
		    android:layout_width="100dp"
		    android:layout_height="wrap_content"
		    android:layout_alignBottom="@+id/labelfriend2"
		    android:layout_toRightOf="@+id/labelfriend2"
		    android:layout_marginLeft="15dp"
		    android:ems="10" />
	    
	    <EditText
		    android:id="@+id/editfriendlocation2"
		    style="@style/Menubox"
		    android:layout_width="100dp"
		    android:layout_height="wrap_content"
		    android:layout_alignBottom="@+id/editfriendname2"
		    android:layout_toRightOf="@+id/editfriendname2"
		    android:layout_marginLeft="15dp"
		    android:ems="10" />
	    
	    <TextView
	        android:id="@+id/labelfriend3"
	        style="@style/MenuLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/labelfriend2"
	        android:layout_below="@+id/labelfriend2"
	    	android:layout_marginTop="20dp"
	        android:text="@string/labelfriend" />
	    
	    <EditText
		    android:id="@+id/editfriendname3"
		    style="@style/Menubox"
		    android:layout_width="100dp"
		    android:layout_height="wrap_content"
		    android:layout_alignBottom="@+id/labelfriend3"
		    android:layout_toRightOf="@+id/labelfriend3"
		    android:layout_marginLeft="15dp"
		    android:ems="10" />
	    
	    <EditText
		    android:id="@+id/editfriendlocation3"
		    style="@style/Menubox"
		    android:layout_width="100dp"
		    android:layout_height="wrap_content"
		    android:layout_alignBottom="@+id/editfriendname3"
		    android:layout_toRightOf="@+id/editfriendname3"
		    android:layout_marginLeft="15dp"
		    android:ems="10" />
	    
	</RelativeLayout>
     	
</RelativeLayout>
</ScrollView>
